--- a/css/clothes.css
+++ b/css/clothes.css
@@ -121,7 +121,7 @@ font-size: 30px;
     border-bottom:2px solid rgb(243 242 236);
     background-color: #FDFDF9;
     position:sticky;
-    top:78px;
+    top:76px;
     z-index: 10;
 }
 .nav-link{
@@ -161,7 +161,8 @@ font-size: 30px;
     top:45px;
     left:80px;
     color:white;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
+    cursor:pointer;
 }
 /* filter */
 
@@ -183,7 +184,7 @@ font-size: 30px;
     border-top: 2px solid rgb(243 242 236);;
     display: inline-block;
 }
-.side-nav a {
+.side-nav button {
     display:flex;
     flex-direction:column;
     font-size: 13px;
@@ -191,9 +192,11 @@ font-size: 30px;
     padding:10px;
     text-decoration: none;
     color:black;
+    border:none;
+    background-color:white;
 }
 
-.side-nav a:hover{
+.side-nav button:hover{
     cursor: pointer;
     text-decoration: underline;
 }
